# ObjectGridLabelingTool

./: .gitignore  README.md  config.yml  pyproject.toml  run.py
src/wine_grid_labeling_tool/: __init__.py  app.py  app_config.py  cli.py  grid_types.py  gui_app.py  gui_main.py  label_store.py
