[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wine-grid-labeling-tool"
version = "0.1.0"
description = "A simple CLI tool for grid-based labeling workflows."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pillow>=10.0.0",
  "PyYAML>=6.0.0",
]
authors = [
  { name = "Your Name" }
]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.scripts]
wine-grid-labeler = "wine_grid_labeling_tool.cli:main"
wine-grid-labeler-gui = "wine_grid_labeling_tool.gui_main:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
